feat: add scroll reveal animations; alternate slide-in; autoplay video; use Runner PNG

--- a/index.html
+++ b/index.html
@@ -277,11 +277,7 @@
 <picture>
 <source type="image/avif" srcset="images/Runner.avif">
 <source type="image/webp" srcset="images/Runner.webp">
-<picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
 <img src="images/Runner.png" alt="Runner image" class="videos-image" loading="lazy" decoding="async">
-</picture>
 </picture>
 </picture>
 </picture>
@@ -289,10 +285,10 @@
 </picture>
 					</div>
 					<div class="videos-player">
-						<video class="video-player" controls="" preload="metadata" playsinline="" poster="images/WebApp%20Landing.png">
-							<source src="videos/braodjump.mov" type="video/quicktime">
-							Your browser does not support the video tag.
-						</video>
+												<video class="video-player" controls preload="metadata" playsinline autoplay muted poster="images/WebApp%20Landing.png">
+													<source src="videos/broadjump%20video.mp4" type="video/mp4">
+													Your browser does not support the video tag.
+												</video>
 					</div>
 				</div>
 
@@ -700,6 +696,8 @@
 	</div>
 
 	<script defer="" src="js/app.min.js"></script>
+	<script defer="" src="js/reveal.js"></script>
+	<link rel="stylesheet" href="css/reveal.css">
 
 
 </body></html>
