fix(drake): mobile layout  subtitle left, copy right; lower slant 30px; commit related index/styles edits

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<link rel="preload" href="css/styles.min.css" as="style" onload="this.rel='stylesheet'">
 	<noscript><link rel="stylesheet" href="css/styles.min.css"></noscript>
 
+	<!-- Small overrides to ensure mobile logo/promo positioning apply immediately -->
+	<link rel="stylesheet" href="css/overrides.css">
+
 	<!-- Preload critical images used in the hero and social previews -->
 	<link rel="preload" as="image" href="images/bluyel.png">
 	<link rel="preload" as="image" href="images/WebApp%20Landing.png">
