chore: save workspace changes (human-platform review)

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 	<meta property="og:description" content="BeOne Sports provides instant movement insights for athletes and coaches — no sensors required.">
 	<!-- Inline override to ensure hero background loads after other styles -->
 	<style>
-	.hero{background-image: url("images/Deskbluewhite.png") !important; background-size:cover !important; background-position:center center !important; background-repeat:no-repeat !important}
-	@media (max-width:600px){
-		.hero{background-image: url("images/phonebluewhite.png") !important}
-	}
+	  .hero{background-image: url("images/Deskblueyellow.png") !important; background-size:cover !important; background-position:center center !important; background-repeat:no-repeat !important}
+	  @media (max-width:600px){
+	    .hero{background-image: url("images/phoneblueyellow.png") !important}
+	  }
 	</style>
 	
 	<script defer="" src="js/app.min.js"></script>
