feat: add person icon (3) and video logos 4-in-a-row mobile layout

--- a/index.html
+++ b/index.html
@@ -474,7 +474,9 @@
 
 				<div class="gs-feature">
 					<div class="gs-feature-icon">
-						<svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 2v20" stroke="#0b1220" stroke-width="1.5" stroke-linecap="round"></path><path d="M2 12h20" stroke="#0b1220" stroke-width="1.5" stroke-linecap="round"></path></svg>
+						<svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="7" r="3.5" stroke="#0b1220" stroke-width="1.5"></circle><path d="M5 19c0-4 3-6 7-6s7 2 7 6" stroke="#0b1220" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+						<svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="7" r="3.5" stroke="#0b1220" stroke-width="1.5"></circle><path d="M5 19c0-4 3-6 7-6s7 2 7 6" stroke="#0b1220" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+						<svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="7" r="3.5" stroke="#0b1220" stroke-width="1.5"></circle><path d="M5 19c0-4 3-6 7-6s7 2 7 6" stroke="#0b1220" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
 					</div>
 					<div class="gs-feature-copy">
 						<p>Create individual or team profiles, connected with coaches</p>
@@ -646,7 +648,10 @@
 			</div>
 		</section>
 
-		<section id="human-platform" class="human-platform">
+		<!-- original human-platform section removed; replaced by human-platform-extend -->
+
+		<!-- New: additional human platform section with deskbluewhite background -->
+		<section id="human-platform-extend" class="human-platform human-platform-extend">
 			<div class="container">
 				<h2 class="section-title">The Global Human Movement Platform</h2>
 				<div class="hp-content">
