--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>BeOne Sports — Payments &amp; Platform</title>
 	<!-- Load critical CSS non-blocking: preload then apply, with noscript fallback -->
-	<link rel="preload" href="css/styles.min.css" as="style" onload="this.rel='stylesheet'">
-	<noscript><link rel="stylesheet" href="css/styles.min.css"></noscript>
+	<link rel="preload" href="css/styles.css" as="style" onload="this.rel='stylesheet'">
+	<noscript><link rel="stylesheet" href="css/styles.css"></noscript>
 
 	<!-- Small overrides to ensure mobile logo/promo positioning apply immediately -->
 	<link rel="stylesheet" href="css/overrides.css">
