feat: replace runner images with animation videos in ams and videos sections

--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>BeOne Sports — Payments &amp; Platform</title>
-	<!-- Load critical CSS non-blocking: preload then apply, with noscript fallback -->
-	<link rel="preload" href="css/styles.css" as="style" onload="this.rel='stylesheet'">
-	<noscript><link rel="stylesheet" href="css/styles.css"></noscript>
-
-	<!-- Small overrides to ensure mobile logo/promo positioning apply immediately -->
-	<link rel="stylesheet" href="css/overrides.css">
+	<!-- Load critical CSS -->
+	<link rel="preload" href="css/style.css" as="style" onload="this.rel='stylesheet'">
+	<noscript><link rel="stylesheet" href="css/style.css"></noscript>
 
 	<!-- Preload critical images used in the hero and social previews -->
 	<link rel="preload" as="image" href="images/bluyel.png">
@@ -33,7 +30,6 @@
 	
 	<script defer="" src="js/app.min.js"></script>
 	<script defer="" src="js/reveal.js"></script>
-	<link rel="stylesheet" href="css/reveal.css">
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="BeOne Sports — Mobile computer vision for sports training">
@@ -221,31 +217,10 @@
 				<h2 class="section-title">A fully integrated athlete management system (AMS)</h2>
 				<p class="section-lead">Manage your organization’s coaches &amp; athletes simply. Assign individual training outcomes remotely and generate club-level insights and performance trends.</p>
 				<div class="ams-media">
-					<picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
-<picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
-<picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
-<picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
-<picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
-<picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
-<img src="images/Runner.png" alt="AMS illustration" class="ams-image" loading="lazy" decoding="async">
-</picture>
-</picture>
-</picture>
-</picture>
-</picture>
-</picture>
+					<video class="ams-video" autoplay muted loop playsinline>
+						<source src="videos/Animation2.webm" type="video/webm">
+						Your browser does not support the video tag.
+					</video>
 				</div>
 			</div>
 		</section>
@@ -273,27 +248,10 @@
 
 				<div class="videos-grid">
 					<div class="videos-media">
-						<picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
-<picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
-<picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
-<picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
-<picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
-<img src="images/Runner.png" alt="Runner image" class="videos-image" loading="lazy" decoding="async">
-</picture>
-</picture>
-</picture>
-</picture>
-</picture>
+						<video class="animation-video" autoplay muted loop playsinline>
+							<source src="videos/Animation1.webm" type="video/webm">
+							Your browser does not support the video tag.
+						</video>
 					</div>
 					<div class="videos-player">
 												<video class="video-player" controls preload="metadata" playsinline autoplay muted poster="images/WebApp%20Landing.png">
@@ -713,6 +671,5 @@
 
 	<script defer="" src="js/app.min.js"></script>
 	<script defer="" src="js/reveal.js"></script>
-	<link rel="stylesheet" href="css/reveal.css">
 </body></html>
 </body></html>
