--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 						</video>
 					</div>
 					<div class="videos-player">
-												<video class="video-player" controls preload="metadata" playsinline autoplay muted poster="images/WebApp%20Landing.png">
+												<video class="video-player" preload="metadata" playsinline autoplay muted poster="images/WebApp%20Landing.png">
 													<source src="videos/broadjump%20video.mp4" type="video/mp4">
 													Your browser does not support the video tag.
 												</video>
@@ -439,156 +439,12 @@
 				<h2 class="section-title">Take it from them...</h2>
 				<div class="carousel" data-autoplay="true" data-interval="4000">
 					<div class="carousel-track">
-							<div class="carousel-item"><picture>
-<source type="image/avif" srcset="images/WebApp Landing.avif">
-<source type="image/webp" srcset="images/WebApp Landing.webp">
-<picture>
-<source type="image/avif" srcset="images/WebApp Landing.avif">
-<source type="image/webp" srcset="images/WebApp Landing.webp">
-<picture>
-<source type="image/avif" srcset="images/WebApp Landing.avif">
-<source type="image/webp" srcset="images/WebApp Landing.webp">
-<picture>
-<source type="image/avif" srcset="images/WebApp Landing.avif">
-<source type="image/webp" srcset="images/WebApp Landing.webp">
-<picture>
-<source type="image/avif" srcset="images/WebApp Landing.avif">
-<source type="image/webp" srcset="images/WebApp Landing.webp">
-<picture>
-<source type="image/avif" srcset="images/WebApp Landing.avif">
-<source type="image/webp" srcset="images/WebApp Landing.webp">
-<img src="images/WebApp Landing.png" alt="slide 1" loading="lazy" decoding="async">
-</picture>
-</picture>
-</picture>
-</picture>
-</picture>
-</picture></div>
-							<div class="carousel-item"><picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
-<picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
-<picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
-<picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
-<picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
-<picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
-<img src="images/Runner.png" alt="slide 2" loading="lazy" decoding="async">
-</picture>
-</picture>
-</picture>
-</picture>
-</picture>
-</picture></div>
-							<div class="carousel-item"><picture>
-<source type="image/avif" srcset="images/QBtogether.avif">
-<source type="image/webp" srcset="images/QBtogether.webp">
-<picture>
-<source type="image/avif" srcset="images/QBtogether.avif">
-<source type="image/webp" srcset="images/QBtogether.webp">
-<picture>
-<source type="image/avif" srcset="images/QBtogether.avif">
-<source type="image/webp" srcset="images/QBtogether.webp">
-<picture>
-<source type="image/avif" srcset="images/QBtogether.avif">
-<source type="image/webp" srcset="images/QBtogether.webp">
-<picture>
-<source type="image/avif" srcset="images/QBtogether.avif">
-<source type="image/webp" srcset="images/QBtogether.webp">
-<picture>
-<source type="image/avif" srcset="images/QBtogether.avif">
-<source type="image/webp" srcset="images/QBtogether.webp">
-<img src="images/QBtogether.png" alt="slide 3" loading="lazy" decoding="async">
-</picture>
-</picture>
-</picture>
-</picture>
-</picture>
-</picture></div>
-							<div class="carousel-item"><picture>
-<source type="image/avif" srcset="images/drakejump.avif">
-<source type="image/webp" srcset="images/drakejump.webp">
-<picture>
-<source type="image/avif" srcset="images/drakejump.avif">
-<source type="image/webp" srcset="images/drakejump.webp">
-<picture>
-<source type="image/avif" srcset="images/drakejump.avif">
-<source type="image/webp" srcset="images/drakejump.webp">
-<picture>
-<source type="image/avif" srcset="images/drakejump.avif">
-<source type="image/webp" srcset="images/drakejump.webp">
-<picture>
-<source type="image/avif" srcset="images/drakejump.avif">
-<source type="image/webp" srcset="images/drakejump.webp">
-<picture>
-<source type="image/avif" srcset="images/drakejump.avif">
-<source type="image/webp" srcset="images/drakejump.webp">
-<img src="images/drakejump.png" alt="slide 4" loading="lazy" decoding="async">
-</picture>
-</picture>
-</picture>
-</picture>
-</picture>
-</picture></div>
-							<div class="carousel-item"><picture>
-<source type="image/avif" srcset="images/WebApp Landing.avif">
-<source type="image/webp" srcset="images/WebApp Landing.webp">
-<picture>
-<source type="image/avif" srcset="images/WebApp Landing.avif">
-<source type="image/webp" srcset="images/WebApp Landing.webp">
-<picture>
-<source type="image/avif" srcset="images/WebApp Landing.avif">
-<source type="image/webp" srcset="images/WebApp Landing.webp">
-<picture>
-<source type="image/avif" srcset="images/WebApp Landing.avif">
-<source type="image/webp" srcset="images/WebApp Landing.webp">
-<picture>
-<source type="image/avif" srcset="images/WebApp Landing.avif">
-<source type="image/webp" srcset="images/WebApp Landing.webp">
-<picture>
-<source type="image/avif" srcset="images/WebApp Landing.avif">
-<source type="image/webp" srcset="images/WebApp Landing.webp">
-<img src="images/WebApp Landing.png" alt="slide 5" loading="lazy" decoding="async">
-</picture>
-</picture>
-</picture>
-</picture>
-</picture>
-</picture></div>
-							<div class="carousel-item"><picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
-<picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
-<picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
-<picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
-<picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
-<picture>
-<source type="image/avif" srcset="images/Runner.avif">
-<source type="image/webp" srcset="images/Runner.webp">
-<img src="images/Runner.png" alt="slide 6" loading="lazy" decoding="async">
-</picture>
-</picture>
-</picture>
-</picture>
-</picture>
-</picture></div>
+							<div class="carousel-item"><img src="images/runner.png" alt="slide 1" loading="lazy" decoding="async"></div>
+							<div class="carousel-item"><img src="images/qbtogether.png" alt="slide 2" loading="lazy" decoding="async"></div>
+							<div class="carousel-item"><img src="images/drakejump.png" alt="slide 3" loading="lazy" decoding="async"></div>
+							<div class="carousel-item"><img src="images/runner.png" alt="slide 4" loading="lazy" decoding="async"></div>
+							<div class="carousel-item"><img src="images/qbtogether.png" alt="slide 5" loading="lazy" decoding="async"></div>
+							<div class="carousel-item"><img src="images/drakejump.png" alt="slide 6" loading="lazy" decoding="async"></div>
 						</div>
 					<button class="carousel-prev" aria-label="Previous">◀</button>
 					<button class="carousel-next" aria-label="Next">▶</button>
