--- a/index.html
+++ b/index.html
@@ -26,6 +26,37 @@
 	  @media (max-width:600px){
 	    .hero{background-image: url("images/phoneblueyellow.png") !important}
 	  }
+	  /* Loading screen to prevent FOUC */
+	  .loading-screen {
+	    position: fixed;
+	    top: 0;
+	    left: 0;
+	    width: 100%;
+	    height: 100%;
+	    background: #ffffff;
+	    display: flex;
+	    align-items: center;
+	    justify-content: center;
+	    z-index: 9999;
+	    opacity: 1;
+	    transition: opacity 0.5s ease-out;
+	  }
+	  .loading-screen.hidden {
+	    opacity: 0;
+	    pointer-events: none;
+	  }
+	  .loading-spinner {
+	    width: 50px;
+	    height: 50px;
+	    border: 4px solid #f0f0f0;
+	    border-top: 4px solid #6366ff;
+	    border-radius: 50%;
+	    animation: spin 0.8s linear infinite;
+	  }
+	  @keyframes spin {
+	    0% { transform: rotate(0deg); }
+	    100% { transform: rotate(360deg); }
+	  }
 	</style>
 	
 	<script defer="" src="js/app.min.js"></script>
@@ -52,6 +83,11 @@
 
 </head>
 <body>
+	<!-- Loading screen to prevent FOUC -->
+	<div class="loading-screen" id="loadingScreen">
+		<div class="loading-spinner"></div>
+	</div>
+
 	<!-- Page structure comments:
 	     - Header: primary navigation & brand
 	     - Main: primary content sections (hero, features, media)
@@ -519,5 +555,18 @@
 	<script defer src="js/hamburger.js"></script>
 	<script defer src="js/app.min.js"></script>
 	<script defer src="js/reveal.js"></script>
+	
+	<!-- Hide loading screen when page is fully loaded -->
+	<script>
+		window.addEventListener('load', function() {
+			const loadingScreen = document.getElementById('loadingScreen');
+			if (loadingScreen) {
+				loadingScreen.classList.add('hidden');
+				setTimeout(() => {
+					loadingScreen.style.display = 'none';
+				}, 500); // Match the transition duration
+			}
+		});
+	</script>
 </body>
 </html>
