--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 	<meta property="og:description" content="BeOne Sports provides instant movement insights for athletes and coaches — no sensors required.">
 	<!-- Inline override to ensure hero background loads after other styles -->
 	<style>
-	  .hero{background-image: url("images/Deskblueyellow.png") !important; background-size:cover !important; background-position:center center !important; background-repeat:no-repeat !important}
+	  .hero{background-image: url("images/Deskblueyellow.png") !important; background-size:100% 100% !important; background-position:center center !important; background-repeat:no-repeat !important}
 	  @media (max-width:600px){
-	    .hero{background-image: url("images/phoneblueyellow.png") !important}
+	    .hero{background-image: url("images/phoneblueyellow.png") !important; background-size:100% 100% !important}
 	  }
 	  /* Loading screen to prevent FOUC */
 	  .loading-screen {
@@ -139,11 +139,12 @@
 	<!-- Main content begins -->
 	<main>
 		<section class="hero">
+			<div class="hero-bubble">Winter discount 25% <br> Join now</div>
 			<div class="container hero-inner">
 				<div class="hero-box">
 					<h1 class="hero-title">
 						<span class="line">Mobile</span>
-						<span class="line">Computer</span>
+						<span class="line">computer</span>
 						<span class="line">vision for</span>
 						<span class="line"><span class="navy">sports</span> <span class="navy">training</span></span>
 					</h1>
@@ -158,31 +159,30 @@
 		</section>
 
 		<section id="drakedive" class="drakedive">
-			<div class="promo-banner" role="status" aria-label="Winter discount">25% off Winter Discount! Start now!</div>
 			<div class="container">
 				<h2 class="section-title">Trusted by the pros, Designed for everyone.</h2>
 
 				<div class="drake-media">
 					<div class="drake-image-wrap">
 						<picture>
-<source type="image/avif" srcset="images/drakejump.avif">
-<source type="image/webp" srcset="images/drakejump.webp">
+<source type="image/avif" srcset="images/Drakephone.png">
+<source type="image/webp" srcset="images/Drakephone.png">
 <picture>
-<source type="image/avif" srcset="images/drakejump.avif">
-<source type="image/webp" srcset="images/drakejump.webp">
+<source type="image/avif" srcset="images/Drakephone.png">
+<source type="image/webp" srcset="images/Drakephone.png">
 <picture>
-<source type="image/avif" srcset="images/drakejump.avif">
-<source type="image/webp" srcset="images/drakejump.webp">
+<source type="image/avif" srcset="images/Drakephone.png">
+<source type="image/webp" srcset="images/Drakephone.png">
 <picture>
-<source type="image/avif" srcset="images/drakejump.avif">
-<source type="image/webp" srcset="images/drakejump.webp">
+<source type="image/avif" srcset="images/Drakephone.png">
+<source type="image/webp" srcset="images/Drakephone.png">
 <picture>
-<source type="image/avif" srcset="images/drakejump.avif">
-<source type="image/webp" srcset="images/drakejump.webp">
+<source type="image/avif" srcset="images/Drakephone.png">
+<source type="image/webp" srcset="images/Drakephone.png">
 <picture>
-<source type="image/avif" srcset="images/drakejump.avif">
-<source type="image/webp" srcset="images/drakejump.webp">
-<img src="images/drakejump.png" alt="DrakeDive image" class="drake-image" loading="lazy" decoding="async">
+<source type="image/avif" srcset="images/Drakephone.png">
+<source type="image/webp" srcset="images/Drakephone.png">
+<img src="images/Drakephone.png" alt="DrakeDive image" class="drake-image" loading="lazy" decoding="async">
 </picture>
 </picture>
 </picture>
@@ -223,24 +223,24 @@
 				<div class="computers-media">
 					<div class="webapp-wrap">
 						<picture>
-<source type="image/avif" srcset="images/WebApp Landing.avif">
-<source type="image/webp" srcset="images/WebApp Landing.webp">
+<source type="image/avif" srcset="images/Computer.png">
+<source type="image/webp" srcset="images/Computer.png">
 <picture>
-<source type="image/avif" srcset="images/WebApp Landing.avif">
-<source type="image/webp" srcset="images/WebApp Landing.webp">
+<source type="image/avif" srcset="images/Computer.png">
+<source type="image/webp" srcset="images/Computer.png">
 <picture>
-<source type="image/avif" srcset="images/WebApp Landing.avif">
-<source type="image/webp" srcset="images/WebApp Landing.webp">
+<source type="image/avif" srcset="images/Computer.png">
+<source type="image/webp" srcset="images/Computer.png">
 <picture>
-<source type="image/avif" srcset="images/WebApp Landing.avif">
-<source type="image/webp" srcset="images/WebApp Landing.webp">
+<source type="image/avif" srcset="images/Computer.png">
+<source type="image/webp" srcset="images/Computer.png">
 <picture>
-<source type="image/avif" srcset="images/WebApp Landing.avif">
-<source type="image/webp" srcset="images/WebApp Landing.webp">
+<source type="image/avif" srcset="images/Computer.png">
+<source type="image/webp" srcset="images/Computer.png">
 <picture>
-<source type="image/avif" srcset="images/WebApp Landing.avif">
-<source type="image/webp" srcset="images/WebApp Landing.webp">
-<img src="images/WebApp Landing.png" alt="Web app landing" class="webapplanding-image" loading="lazy" decoding="async">
+<source type="image/avif" srcset="images/Computer.png">
+<source type="image/webp" srcset="images/Computer.png">
+<img src="images/Computer.png" alt="Computer" class="webapplanding-image" loading="lazy" decoding="async">
 </picture>
 </picture>
 </picture>
@@ -294,7 +294,7 @@
 						</video>
 					</div>
 					<div class="videos-player">
-												<video class="video-player" preload="metadata" playsinline autoplay muted poster="images/WebApp%20Landing.png">
+												<video class="video-player" preload="metadata" playsinline autoplay muted loop poster="images/WebApp%20Landing.png">
 													<source src="videos/broadjump%20video.mp4" type="video/mp4">
 													Your browser does not support the video tag.
 												</video>
