--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
 		<section id="drakedive" class="drakedive">
 			<div class="container">
-				<h2 class="section-title">Trusted by the pros, Designed for everyone.</h2>
+				<h2 class="section-title">Trusted by the pros,<br>designed for<br>everyone</h2>
 
 				<div class="drake-media">
 					<div class="drake-image-wrap">
@@ -207,7 +207,7 @@
 								<span class="drake-char" data-char="n">n</span>
 							</h3>
 							<div class="drake-copy-box">
-								<p class="drake-copy">Sports-specific data points from elite athletes</p>
+								<p class="drake-copy">Sports-specific data<br>points from elite<br>athletes</p>
 							</div>
 						</div>
 					</div>
@@ -217,7 +217,7 @@
 
 		<section id="computers" class="computers">
 			<div class="container">
-				<h2 class="section-title">The simplest, fastest and most versatile sports-tech</h2>
+				<h2 class="section-title">The simplest, fastest<br>and most versatile<br>sports-tech</h2>
 				<p class="section-lead">BeONE is built for fast-paced, competitive environments. Designed for on-field and off-field training &amp; feedback. Athletes and coaches gain immediate insights on Metrics that Matter™</p>
 
 				<div class="computers-media">
@@ -254,7 +254,7 @@
     
 		<section id="ams" class="ams">
 			<div class="container">
-				<h2 class="section-title">A fully integrated athlete management system (AMS)</h2>
+				<h2 class="section-title">A fully integrated<br>athlete management<br>system (AMS)</h2>
 				<p class="section-lead">Manage your organization’s coaches &amp; athletes simply. Assign individual training outcomes remotely and generate club-level insights and performance trends.</p>
 				<div class="ams-media">
 					<video class="ams-video" autoplay muted loop playsinline>
@@ -395,7 +395,7 @@
 
 		<section id="get-started" class="get-started">
 			<div class="container">
-				<h2 class="section-title">Get Started</h2>
+				<h2 class="section-title">Ready to get started?</h2>
 				<p class="section-lead">Create an account instantly to get started or contact us for enterprise and organizational accounts</p>
 
 				<div class="gs-icons">
@@ -459,9 +459,17 @@
 
 				<div class="gs-feature">
 					<div class="gs-feature-icon">
-						<svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="7" r="3.5" stroke="#0b1220" stroke-width="1.5"></circle><path d="M5 19c0-4 3-6 7-6s7 2 7 6" stroke="#0b1220" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
-						<svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="7" r="3.5" stroke="#0b1220" stroke-width="1.5"></circle><path d="M5 19c0-4 3-6 7-6s7 2 7 6" stroke="#0b1220" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
-						<svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="7" r="3.5" stroke="#0b1220" stroke-width="1.5"></circle><path d="M5 19c0-4 3-6 7-6s7 2 7 6" stroke="#0b1220" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+						<svg width="80" height="60" viewBox="0 0 80 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<!-- Left person -->
+							<circle cx="20" cy="28" r="8" stroke="#4a6fa5" stroke-width="2" fill="none"></circle>
+							<path d="M8 52c0-8 5-12 12-12s12 4 12 12" stroke="#4a6fa5" stroke-width="2" stroke-linecap="round" fill="none"></path>
+							<!-- Center person (slightly higher) -->
+							<circle cx="40" cy="18" r="8" stroke="#4a6fa5" stroke-width="2" fill="none"></circle>
+							<path d="M28 42c0-8 5-12 12-12s12 4 12 12" stroke="#4a6fa5" stroke-width="2" stroke-linecap="round" fill="none"></path>
+							<!-- Right person -->
+							<circle cx="60" cy="28" r="8" stroke="#4a6fa5" stroke-width="2" fill="none"></circle>
+							<path d="M48 52c0-8 5-12 12-12s12 4 12 12" stroke="#4a6fa5" stroke-width="2" stroke-linecap="round" fill="none"></path>
+						</svg>
 					</div>
 					<div class="gs-feature-copy">
 						<p>Create individual or team profiles, connected with coaches</p>
@@ -493,13 +501,14 @@
 
 		<!-- New: additional human platform section with deskbluewhite background -->
 		<section id="human-platform-extend" class="human-platform human-platform-extend">
+			<div class="slant-divider-hp" aria-hidden="true"></div>
 			<div class="container">
 				<h2 class="section-title">The global human<br>movement<br>platform</h2>
 				<div class="hp-content">
 					<ul class="hp-list">
-						<li>Mobile motion capture, no wearables,sensors or installations</li>
-						<li>Rankings &amp; benchmarks from professional athletes</li>
-						<li>Systematic data, individual training insights and data</li>
+						<li>Mobile motion capture, no wearables,<br>sensors or installations</li>
+						<li>Rankings &amp; benchmarks<br>from professional athletes</li>
+						<li>Systematic data, individual<br>training insights and data</li>
 					</ul>
 					<a class="btn hp-cta" href="#">Join BeOne</a>
 					<div class="hp-logo">
