--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 					</div>
 					<div class="nos-video-item">
 						<video class="nos-video" preload="metadata" playsinline autoplay muted loop poster="images/WebApp%20Landing.png">
-							<source src="videos/broadjump%20video.webm" type="video/mp4">
+							<source src="videos/broadjump%video.webm" type="video/mp4">
 							Your browser does not support the video tag.
 						</video>
 					</div>
