--- a/index.html
+++ b/index.html
@@ -284,8 +284,9 @@
 						</video>
 					</div>
 					<div class="nos-video-item">
-						<video class="nos-video" preload="metadata" playsinline autoplay muted loop poster="images/WebApp%20Landing.png">
-							<source src="videos/broadjump%video.webm" type="video/mp4">
+						<video class="nos-video" preload="metadata" playsinline autoplay muted loop poster="images/WebApp%20Landing.png" controls>
+							<source src="videos/broadjump.webm" type="video/webm">
+							<source src="videos/broadjump.mp4" type="video/mp4">
 							Your browser does not support the video tag.
 						</video>
 					</div>
